Fix bug 1710384: Prevent batch editor layout breakage (#1947)
* Fix bug 1710384: Prevent batch editor layout breakage by preventing a class name clash.

Also
* More specific CSS selectors
* Move user-controls selector to the component CSS file
* Remove duplicate selector from WaveLoader.css

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,36 +14,27 @@
     position: relative;
 }
 
-#app > header .user-controls {
-    float: right;
-}
-
-#app .main-content {
+#app > .main-content {
     display: flex;
     flex: 1;
     justify-content: space-between;
     overflow: auto;
 }
 
-#app .panel-content,
-#app .panel-list {
+#app > .main-content > .panel-content,
+#app > .main-content > .panel-list {
     height: 100%;
     position: relative;
 }
 
-#app .panel-list {
+#app > .main-content > .panel-list {
     width: 25%;
 }
 
-#app .panel-content {
+#app > .main-content > .panel-content {
     border-left: 1px solid #5e6475;
     box-sizing: border-box;
     width: 75%;
-}
-
-#app .inner {
-    display: table-cell;
-    vertical-align: middle;
 }
 
 /* NProgress: A nanoscopic progress bar. */
